--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
     <ul class="gallery">
         <!-- Список <li> с карточками изображений -->
     </ul>
+    <button type="button" data-action="load-more" disabled>
+<span>Load more</span>
+    </button>
     <script src="index.js"></script>
 </body>
 </html>
